--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ langchain-huggingface>=0.0.3,<0.1.0
 langchain-core>=0.2.0,<0.3.0
 langchain-community>=0.2.0,<0.3.0
 langchain-chroma>=0.1.0,<0.2
+python-dotenv
 langchain-groq
 streamlit
 accelerate
